--- a/style.css
+++ b/style.css
@@ -150,6 +150,100 @@ first-section div {
   color: gray;
   font-size: 9px;
 }
+@media screen and (max-width: 425px) {
+  nav {
+    max-width: 100vw;
+    height: 50px;
+  }
+  .left {
+  font-size: 0.75rem;
+}
+  nav ul li {
+    list-style: none;
+    margin: 0 7px;
+  }
+  nav ul li a {
+    font-size: 0.5rem;
+  }
+  .first-section {
+  margin: 33px 0;
+}
+.left-section {
+  font-size: 1rem;
+}
+.left-section .buttons {
+  padding: 13px 0;
+}
+.left-section .btn {
+  padding: 3px;
+  border: 0.7px solid white;
+  border-radius: 2px;
+  font-size: 7px;
+}
+.right-section {
+  width: 166.67px;
+  height: 166.67px;
+  border-radius: 7px;
+  box-shadow: 0 2.67px 5.34px rgba(94, 122, 183, 0.7);
+}
+.right-section img {
+  width: 166.67px;
+  height: 166.67px;
+}
+.text-gray{
+  font-size: 1rem;
+}
+.second-section h1 {
+  font-size: 0.634rem;
+}
+.second-section .box {
+  height: 0.7px;
+  margin: 19px 0;
+}
+.second-section .vertical {
+  height: 31px;
+  width: 0.34px;
+  margin: 0 30px;
+}
+.image-top {
+  width: 8px;
+  top: -11px;
+  left: -3px;
+}
+.vertical-title {
+  top: 25px;
+  width: 50px;
+  font-size: 4.67px;
+}
+.vertical-desc {
+  top: 25px;
+  width: 50px;
+  font-size: 3px;
+}
+.footer {
+  padding: 8px 41px;
+}
+.footer > div {
+  width: 74px;
+}
+footer .footer-rights {
+  padding: 3px 0;
+}
+.footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1px;
+}
+.footer h3{
+  font-size: 0.7rem;
+}
+
+.footer li{
+  font-size: 0.5rem;
+}
+}
 footer {
   background-color: #0e0e1a;
 }
