--- a/style.css
+++ b/style.css
@@ -32,26 +32,6 @@ nav ul li a:hover {
   color: rgb(153, 153, 226);
   font-size: 1.01rem;
 }
-.right hover-underline {
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
-}
-
-.right hover-underline::after {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: black;
-  transition: width 0.4s ease;
-}
-
-. right hover-underline:hover::after {
-  width: 100%;
-}
 
 main hr {
   border: 0;
@@ -199,9 +179,13 @@ first-section div {
 }
 
 @media screen and (max-width: 425px) {
+main{
+  height: 600px;
+}
   nav {
     max-width: 100vw;
     height: 50px;
+    gap: 0;
   }
   .left {
   font-size: 0.75rem;
@@ -214,6 +198,7 @@ first-section div {
     font-size: 0.5rem;
   }
   .first-section {
+    height: 200px;
   margin: 33px 0;
 }
 .left-section {
